--- a/index.html
+++ b/index.html
@@ -107,11 +107,19 @@ function set_my_position(position) {
 
     all_markers.push(myMarker);
 
-    // Calculate distance for each marker
+    // Calculate distance for each marker, check if distance is less than tolerance and if so announce that user has found the object
     for (var i = 0; i < all_markers.length; i++) {
-        var distance = google.maps.geometry.spherical.computeDistanceBetween(myLatLng, all_markers[i].getPosition());
-        console.log('Distance to marker ' + i + ': ' + distance + ' meters');
-    }
+  var distance = google.maps.geometry.spherical.computeDistanceBetween(pos, all_markers[i].getPosition());
+
+  if (distance < tolerance) {
+    var what_is_it = all_markers[i].getIcon();
+    what_is_it = what_is_it.replace(".png", "");
+    alert("Found the " + what_is_it);
+    all_markers[i].setMap(null); // Remove the marker from the map
+  }
+}
+
+    
 }
               
 </script>
