show distance from object

--- a/index.html
+++ b/index.html
@@ -110,7 +110,17 @@ function set_my_position(position) {
     // Calculate distance for each marker, check if distance is less than tolerance and if so announce that user has found the object
     for (var i = 0; i < all_markers.length; i++) {
   var distance = google.maps.geometry.spherical.computeDistanceBetween(pos, all_markers[i].getPosition());
+        showDistance(i, distance);
+    }
+}
 
+// Function to display the distance in HTML
+function showDistance(markerIndex, distance) {
+    var distanceInfo = document.getElementById('distance_info');
+    distanceInfo.innerHTML += 'Distance to marker ' + markerIndex + ': ' + distance.toFixed(2) + ' meters<br>';
+}
+
+        
   if (distance < tolerance) {
     var what_is_it = all_markers[i].getIcon();
     what_is_it = what_is_it.replace(".png", "");
