--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
   
       // data variable contains the marker data in a string format
       var data = `51.36090873171403 -0.2128131693115165 tree.png
-      51.36158534804417 -0.21196022684478066 flower.png`;
+      51.36158534804417 -0.21196022684478066 flower.png
+      51.364842903323 -0.21163192232163341 leaf.png
+      `;
   
       // Split data by new line
       var markers = data.split("\n");
