--- a/index.html
+++ b/index.html
@@ -22,99 +22,101 @@
 </script>
 
 <body>
-    <p>YourSpace Tree-sure Hunt</p>
-    <div id="tree_map"></div>
-  
-    <script>
-      // variable declared to store the map object
-      var tree_map;
-  
-      // tolerance value in metres
-      var tolerance = 25;
-  
-      // all_markers array initialised to store the marker objects
-      var all_markers = [];
-  
-      // data variable contains the marker data in a string format
-      var data = `51.36090873171403 -0.2128131693115165 tree.png
+  <p>YourSpace Tree-sure Hunt</p>
+  <div id="tree_map"></div>
+
+  <script>
+    // variable declared to store the map object
+    var tree_map;
+
+    // tolerance value in metres
+    var tolerance = 25;
+
+    // all_markers array initialised to store the marker objects
+    var all_markers = [];
+
+    // data variable contains the marker data in a string format
+    var data = `51.36090873171403 -0.2128131693115165 tree.png
       51.36158534804417 -0.21196022684478066 flower.png
       51.364842903323 -0.21163192232163341 leaf.png
       `;
-  
-      // Split data by new line
-      var markers = data.split("\n");
-  
-      // Variable to store the user's marker
-      var userMarker;
-  
-      // initMap() function is defined, which will be called to initialise the map and create markers.
-      function initMap() {
-        // tree_map created using the google.maps.Map constructor, specifying the map element and its options
-        tree_map = new google.maps.Map(document.getElementById('tree_map'), {
-          zoom: 18,
-          center: {
-            lat: 51.361376,
-            lng: -0.212899
-          }
-        });
-    
-        // Check for geolocation support and watch the user's position
-        if (navigator.geolocation) {
-            navigator.geolocation.watchPosition(set_my_position, handle_error, { enableHighAccuracy: true });
 
-          
-        } else {
-          alert("Geolocation doesn't work in your browser");
+    // Split data by new line
+    var markers = data.split("\n");
+
+    // Variable to store the user's marker
+    var userMarker;
+
+    // initMap() function is defined, which will be called to initialise the map and create markers.
+    function initMap() {
+      // tree_map created using the google.maps.Map constructor, specifying the map element and its options
+      tree_map = new google.maps.Map(document.getElementById('tree_map'), {
+        zoom: 18,
+        center: {
+          lat: 51.361376,
+          lng: -0.212899
         }
-  
-        // Loops through the array of markers
-        for (var i = 0; i < markers.length; i++) {
-          var markerData = markers[i].trim().split(" ");
-  
-          var latitude = parseFloat(markerData[0]);
-          var longitude = parseFloat(markerData[1]);
-          var icon = markerData[2];
-  
-          var markerPosition = {
-            lat: latitude,
-            lng: longitude
-          };
-  
-          var marker = new google.maps.Marker({
-            position: markerPosition,
-            map: tree_map,
-            icon: icon
-          });
-  
-          all_markers.push(marker);
-        }
+      });
+
+      // Check for geolocation support and watch the user's position
+      if (navigator.geolocation) {
+        navigator.geolocation.watchPosition(set_my_position, handle_error, {
+          enableHighAccuracy: true
+        });
+      } else {
+        alert("Geolocation doesn't work in your browser");
       }
-  
-      // Geolocation callback function
-      function set_my_position(position) {
-        var pos = {
-          lat: position.coords.latitude,
-          lng: position.coords.longitude
+
+      // Loops through the array of markers
+      for (var i = 0; i < markers.length; i++) {
+        var markerData = markers[i].trim().split(" ");
+
+        var latitude = parseFloat(markerData[0]);
+        var longitude = parseFloat(markerData[1]);
+        var icon = markerData[2];
+
+        var markerPosition = {
+          lat: latitude,
+          lng: longitude
         };
-  
-        removeUserMarker();
-        createUserMarker(pos);
-      }
-  
-      function removeUserMarker() {
-        if (userMarker) {
-          userMarker.setMap(null);
-        }
-      }
-  
-      function createUserMarker(position) {
-        userMarker = new google.maps.Marker({
-          position: position,
+
+        var marker = new google.maps.Marker({
+          position: markerPosition,
           map: tree_map,
-          icon: 'https://maps.google.com/mapfiles/kml/shapes/man.png'
+          icon: icon
         });
 
-        function handleMarkerDetection(position) {
+        all_markers.push(marker);
+      }
+    }
+
+    // Geolocation callback function
+    function set_my_position(position) {
+      var pos = {
+        lat: position.coords.latitude,
+        lng: position.coords.longitude
+      };
+
+      removeUserMarker();
+      createUserMarker(pos);
+      handleMarkerDetection(pos);
+    }
+
+    function removeUserMarker() {
+      if (userMarker) {
+        userMarker.setMap(null);
+      }
+    }
+
+    function createUserMarker(position) {
+      userMarker = new google.maps.Marker({
+        position: position,
+        map: tree_map,
+        icon: 'https://maps.google.com/mapfiles/kml/shapes/man.png'
+      });
+    }
+
+    function handleMarkerDetection(position) {
       for (var i = 0; i < all_markers.length; i++) {
         var marker = all_markers[i];
 
@@ -134,7 +136,6 @@
         }
       }
     }
-  }
   </script>
 
 </body>
