--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       // data variable contains the marker data in a string format
       var data = `51.36090873171403 -0.2128131693115165 tree.png
       51.36158534804417 -0.21196022684478066 flower.png
-      51.36491615123361 -0.21205793478312085 leaf.png`;
+      51.3647254538826 -0.21169339639094842 leaf.png
+      51.36491615123361 -0.21205793478312085 leaf.png
+      `;
   
       // Split data by new line
       var markers = data.split("\n");
@@ -96,6 +98,7 @@
   
         removeUserMarker();
         createUserMarker(pos);
+        handleMarkerDetection(pos); // Call handleMarkerDetection with the user's position
       }
   
       function removeUserMarker() {
