--- a/index.html
+++ b/index.html
@@ -3,33 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>YourSpace Tree-sure Hunt</title>
-    <style>
-    /* Styles for the pop-up box */
-    .popup {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: white;
-      padding: 20px;
-      z-index: 9999;
-    }
-  </style>
-</head>
-
-<style>
-  #tree_map {
-    height: 100%;
-    width: 100%;
-    left: 0;
-    position: absolute;
-    top: 100px;
-    background-color: palegreen;
-  }  
-</style>
-
+  <title>Seears Park Tree-sure Trail</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
+  
 <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcPEL3GsHaFKvBHv1gX2ergBKIA1HIq3o&callback=initMap&libraries=geometry">
 </script>
