--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcPEL3GsHaFKvBHv1gX2ergBKIA1HIq3o&callback=initMap&libraries=geometry">
 </script>
-
+</head>
+  
 <body>
     <p>YourSpace Tree-sure Hunt</p>
     <p id="score">Score: 0</p>
