--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
   
 <body>
+  <div class="navbar">
+    <a href="#">Home</a>
+    <a href="#">Tree information</a>
+    <a href="#">About Seears Park</a>
+    <a href="#">Contact</a>
+  </div>
+  
     <p>YourSpace Tree-sure Hunt</p>
     <p id="score">Score: 0</p>
     <div id="tree_map"></div>
