--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     <a href="#">Tree information</a>
     <a href="#">About Seears Park</a>
     <a href="#">Contact</a>
+    <span id="score">Score: 0</span>
   </div>
   
-    <p>YourSpace Tree-sure Hunt</p>
-    <p id="score">Score: 0</p>
+    <p>The Seears Park Tree-sure Trail
+    Some instructions here....
+      Some more instructions....
+    </p>
     <div id="tree_map"></div>
     <!-- Pop-up box content -->
     <div class="popup" id="popupBox">
