adding trail instructions

--- a/index.html
+++ b/index.html
@@ -20,11 +20,20 @@
     <a href="#">Contact</a>
     <span id="score">Score: 0</span>
   </div>
+
+
+ <div class="instructions">
+    <h2>The Seears Park Tree-sure Trail</h2>
+    <p>Here are the steps to follow for the tree-sure trail:</p>
+    <ol>
+      <li>Step 1: Use the map below to navigate through the park.</li>
+      <li>Step 2: When you get close to one of the flower, leaf or tree symbols, you will get some information about what you can find in that area.</li>
+      <li>Step 3: The symbol will disappear from your map and you will be given some points.</li>
+      <li>Step 4: Keep track of your score at the top right corner.</li>
+      <li>Step 5: Complete the trail and enjoy!</li>
+    </ol>
+  </div>
   
-    <p>The Seears Park Tree-sure Trail
-    Some instructions here....
-      Some more instructions....
-    </p>
     <div id="tree_map"></div>
     <!-- Pop-up box content -->
     <div class="popup" id="popupBox">
