--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcPEL3GsHaFKvBHv1gX2ergBKIA1HIq3o&callback=initMap&libraries=geometry">
 </script>
 </head>
-  
+
+  <!-- Navbar -->
 <body>
   <div class="navbar">
     <a href="#">Home</a>
@@ -21,7 +22,8 @@
     <span id="score">Score: 0</span>
   </div>
 
-
+<!-- Main page content -->
+<div class="content">
  <div class="instructions">
     <h2>The Seears Park Tree-sure Trail</h2>
     <p>Here are the steps to follow for the tree-sure trail:</p>
@@ -35,8 +37,10 @@
     </ol>
   </div>
   
-    <div id="tree_map"></div>
-    <!-- Pop-up box content -->
+  <div id="tree_map"></div>
+</div>
+
+  <!-- Pop-up box content -->
     <div class="popup" id="popupBox">
     <img id="popupImage" src="" alt="Found Object">
     <p id="popupInfo"></p>
