adding instructions pop up

--- a/index.html
+++ b/index.html
@@ -23,25 +23,26 @@
   </div>
 
 <!-- Main page content -->
-<div class="content">
- <div class="instructions">
-    <h2>The Seears Park Tree-sure Trail</h2>
-    <p>Here are the steps to follow for the tree-sure trail:</p>
-    <ol>
-      <li>Step 1: Use the map below to navigate through the park using your phone. Make sure that you have geolocation turned on for this to work effectively.</li>
-      <li>Step 2: When you get close to one of the flower, leaf or tree symbols on the map, you will see some information about what you can find in that area (you may still need to move around a little to look for it).</li>
-      <li>Step 3: The symbol will disappear from your map and you will collect a point.</li>
-      <li>Step 4: Keep track of your score at the top right corner.</li>
-      <li>Step 5: The trail ends when all the sympbols have disappeared from your map. Enjoy!</li>
-      <li>NOTE: If you prefer to take a walk without scoring points or using geolocation, you can look at all the photos in 'Tree information' above and see if you can see these features of Seears Park.</li>
-    </ol>
-  </div>
-  
-  <div id="tree_map"></div>
+  <!-- Pop-up box content for instructions -->
+  <div class="popup" id="instructionsPopup">
+  <h2>The Seears Park Tree-sure Trail</h2>
+  <p>Here are the steps to follow for the tree-sure trail:</p>
+  <ol>
+    <li>Step 1: Use the map below to navigate through the park using your phone. Make sure that you have geolocation turned on for this to work effectively.</li>
+    <li>Step 2: When you get close to one of the flower, leaf, or tree symbols on the map, you will see some information about what you can find in that area (you may still need to move around a little to look for it).</li>
+    <li>Step 3: The symbol will disappear from your map, and you will collect a point.</li>
+    <li>Step 4: Keep track of your score at the top right corner.</li>
+    <li>Step 5: The trail ends when all the symbols have disappeared from your map. Enjoy!</li>
+    <li>NOTE: If you prefer to take a walk without scoring points or using geolocation, you can look at all the photos in 'Tree information' above and see if you can find these features in Seears Park.</li>
+  </ol>
+  <button onclick="closeInstructionsPopup()">Close</button>
 </div>
 
-  <!-- Pop-up box content -->
-    <div class="popup" id="popupBox">
+<!-- Main map -->
+<div id="tree_map"></div>
+
+<!-- Pop-up box content when object found -->
+  <div class="popup" id="popupBox">
     <img id="popupImage" src="" alt="Found Object">
     <p id="popupInfo"></p>
     <button onclick="closePopup()">Close</button>
