--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <!-- Navbar -->
 <body>
   <div class="navbar">
-    <a href="#">Home</a>
-    <a href="#">Tree information</a>
-    <a href="#">About Seears Park</a>
-    <a href="#">Contact</a>
+    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/">Home</a>
+    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/instructions/">Instructions</a>
+    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/information/">Tree information</a>
+    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/about/">About Seears Park</a>
     <span id="score">Score: 0</span>
   </div>
 
