--- a/instructions.html
+++ b/instructions.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
+
+    <div class="navbar">
+    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/">Home</a>
+    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/instructions/">Instructions</a>
+    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/information/">Tree information</a>
+    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/about/">About Seears Park</a>
+  </div>
+  
   <!-- Instructions content -->
     <h2>The Seears Park Tree-sure Trail</h2>
     <p>Here are the steps to follow for the tree-sure trail:</p>
