--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!--Grid row 2-->
   <div class="row d-flex justify-content-center">  
   <!-- Instructions content -->
-  <div class="content">
+  <div class="content p-4">
     <p>To follow the Seears Park Tree-sure Trail, this is what you need to do:</p>
     <ol>
       <li>Use the map below to navigate your way around the park. Make sure that you have geolocation turned on for this to work effectively.</li>
